# RMA

./: .gitignore  readme.md
RMA-Py/: pyproject.toml  readme.md
RMA-Py/evaluation/: compare_models.py
RMA-Py/examples/: simple_demo.py  sine_prediction.py
RMA-Py/rma/: core.py  utils.py
RMA-Rust/: Cargo.toml  readme.md
RMA-Rust/benches/: rma_benchmark.rs
RMA-Rust/examples/: deep_prediction.rs  simple_demo.rs
RMA-Rust/rma-core/: Cargo.toml
RMA-Rust/rma-core/src/: deep.rs  lib.rs  original.rs
RMA-Rust/rma-evaluation/: Cargo.toml
RMA-Rust/rma-evaluation/src/: main.rs
RMA.App.Example/: Program.cs
RMA.App.Testing/: Program.cs  RMA.App.Testing.csproj
RMA.Core/: RMA.Core.csproj  RMA.Core.sln  RelationalMemoryAccumulator.cs  RelationalMemoryAccumulatorDeep.cs
