[package]
name = "rma-core"
version = "0.1.0"
edition = "2021"
description = "Relational Memory Accumulator - Architecture récurrente légère avec mémoire relationnelle"
license = "MIT"
repository = "https://github.com/FilleuxStudio/RMA"
keywords = ["machine-learning", "neural-network", "time-series", "memory"]
categories = ["science", "algorithms"]

[dependencies]
rand = "0.9.2"